moved Initializer boilerplate into jekyll 'include' snippets

--- a/webroot/_layouts/default.html
+++ b/webroot/_layouts/default.html
@@ -1,7 +1,9 @@
-{% include header.html %}
+{% include head.html %}
 
-<!-- {% include nav.html %} -->
+{% include header.html %}
 
 {{ content }}
 
 {% include footer.html %}
+
+{% include foot.html %}
