--- a/webroot/_includes/header.html
+++ b/webroot/_includes/header.html
@@ -1,12 +1,8 @@
 <div class="header-container">
     <header class="wrapper clearfix">
         <h1 class="title">{{ page.title }}</h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/page-2.html">Page 2</a></li>
-                <li><a href="#">nav ul li a</a></li>
-            </ul>
-        </nav>
+
+        {% include nav.html %}
+
     </header>
 </div>
