add contact short and full organisms

--- a/webroot/_includes/head.html
+++ b/webroot/_includes/head.html
@@ -10,11 +10,14 @@
     <title>{% if page.meta.title %}{{ page.meta.title }}{% else %}Tysone Steele Associates{% endif %}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="css/normalize.min.css">
+    <!--Bootstrao-->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="css/main.css">
 
+
+    <!--TODO ask Dan about modernizr-->
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
