add correct pages, initial nav menu

--- a/webroot/_layouts/default.html
+++ b/webroot/_layouts/default.html
@@ -1,9 +1,9 @@
 {% include head.html %}
 
-{% include header.html %}
+{% include organisms/header.html %}
 
 {{ content }}
 
-{% include footer.html %}
+{% include organisms/footer.html %}
 
 {% include foot.html %}
