--- a/webroot/_includes/organisms/header.html
+++ b/webroot/_includes/organisms/header.html
@@ -2,7 +2,7 @@
     <header class="wrapper clearfix">
         <h1 class="title">{{ page.title }}</h1>
 
-        {% include nav.html %}
+        {% include molecule/nav.html %}
 
     </header>
 </div>
