add logo and info to the header

--- a/webroot/_includes/molecule/nav.html
+++ b/webroot/_includes/molecule/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="clearfix">
     <ul class="nav nav-pills nav-justified">
         <li><a href="index.html#">New Patient Specials</a></li>
         <li><a href="index.html#">Patient Reviews</a></li>
