--- a/webroot/_includes/organisms/header.html
+++ b/webroot/_includes/organisms/header.html
@@ -1,8 +1,15 @@
 <div class="header-container">
     <header class="wrapper clearfix">
-        <h1 class="title">{{ page.title }}</h1>
-
+        <div class="row">
+            <div class="header-logo pull-left">
+                <img src="images/furusho-masthead-logo.png" alt="">
+            </div>
+            <div class="header-info pull-right">
+                <h4>Just off Edens Expressway (Hwy 94)</h4>
+                <h5>New Patients: {{ site.data.content.contact.phone-new }}</h5>
+                <h6>Existing Patients: {{ site.data.content.contact.phone-existing }}</h6>
+            </div>
+        </div>
         {% include molecule/nav.html %}
-
     </header>
 </div>
