refactor contact to handle toggle between short and verbose

--- a/webroot/_includes/organisms/footer.html
+++ b/webroot/_includes/organisms/footer.html
@@ -1,5 +1,5 @@
-<div class="footer-container">
+<section class="footer-container">
     <footer class="wrapper">
-        <h3>footer</h3>
+        <h6 class="center-block">Copyright © 2016 All Rights Reserved by Tyson Steele Associates. Privacy Policy</h6>
     </footer>
-</div>
+</section>
