--- a/webroot/_includes/organisms/header.html
+++ b/webroot/_includes/organisms/header.html
@@ -1,5 +1,6 @@
-<div class="header-container">
+<section class="header-container">
     <header class="wrapper clearfix">
+
         <div class="row">
             <div class="header-logo pull-left">
                 <img src="images/furusho-masthead-logo.png" alt="">
@@ -12,4 +13,4 @@
         </div>
         {% include molecule/nav.html %}
     </header>
-</div>
+</section>
