--- a/webroot/_scss/base/_colors.scss
+++ b/webroot/_scss/base/_colors.scss
@@ -1,1 +1,20 @@
 $c-gray: hsl(0, 0%, 50%);
+
+//colors
+//========
+
+//backgrounds
+$background-dark: #8117B7;
+$background-first: #76BFB7;
+$background-second: #76BFB7;
+$background-third: #76BFB7;
+
+
+//font colors
+$primary-font: rgba(56,27,71,0.90);
+$accent-font-first: #FFFFFF;
+$accent-font-second: #8117B7;
+$accent-font-third: #FFFFFF;
+
+//btn colors
+$btn-border: #FFFFFF;
