--- a/webroot/_includes/molecule/nav.html
+++ b/webroot/_includes/molecule/nav.html
@@ -1,12 +1,12 @@
 <nav class="clearfix">
     <ul class="nav nav-pills nav-justified">
-        <li><a href="index.html#">New Patient Specials</a></li>
-        <li><a href="index.html#">Patient Reviews</a></li>
+        <li><a class="nav__link" href="index.html#">New Patient Specials</a></li>
+        <li><a class="nav__link" href="index.html#">Patient Reviews</a></li>
         {% assign sorted = site.pages | sort:"weight" %}
         {% for item in sorted %}
             {% if item.link.text and item.link.text != "Home" %}
                 <li {% if page.title==item.title %} class="active" {% endif %}>
-                    <a href="{{ item.link.url }}">{{ item.link.text }}</a>
+                    <a class="nav__link" href="{{ item.link.url }}">{{ item.link.text }}</a>
                 </li>
             {% endif %}
         {% endfor %}
