add section for specials

--- a/webroot/_scss/main.scss
+++ b/webroot/_scss/main.scss
@@ -1,4 +1,5 @@
 @import "base/_colors.scss";
+@import "globals/_fonts.scss";
 @import "components/_contact.scss";
 @import "components/_header.scss";
 @import "components/_btn.scss";
