add specials styling

--- a/webroot/_scss/main.scss
+++ b/webroot/_scss/main.scss
@@ -1,6 +1,7 @@
 @import "base/_colors.scss";
 @import "globals/_fonts.scss";
 @import "components/_contact.scss";
+@import "components/_specials.scss";
 @import "components/_header.scss";
 @import "components/_btn.scss";
 
