update and style footer, add fb link

--- a/webroot/_includes/organisms/footer.html
+++ b/webroot/_includes/organisms/footer.html
@@ -1,5 +1,8 @@
-<section class="footer-container">
-    <footer class="wrapper">
-        <h6 class="center-block">Copyright © 2016 All Rights Reserved by Tyson Steele Associates. Privacy Policy</h6>
+<section class="footer">
+    <footer class="footer__wrapper center clearfix">
+        <div class="footer__content">
+            <a href="https://www.facebook.com/Dentistry-for-Kids-Ltd-Dr-Furusho-Dr-Kollmann-293517314003627/"><img src="images/facebook_round_blue.svg" alt="facebook link" class="facebook-icon pull-left"></a>
+            <h6 class="footer__text">Copyright © 2016 All Rights Reserved by Tyson Steele Associates. Privacy Policy</h6>
+        </div>
     </footer>
 </section>
