--- a/webroot/_scss/base/_colors.scss
+++ b/webroot/_scss/base/_colors.scss
@@ -8,6 +8,7 @@ $background-dark: #8117B7;
 $background-first: #76BFB7;
 $background-second: #76BFB7;
 $background-third: #76BFB7;
+$background-footer: #4A4A4A;
 
 
 //font colors
