add responsive behavior to header

--- a/webroot/_includes/organisms/header.html
+++ b/webroot/_includes/organisms/header.html
@@ -1,14 +1,14 @@
 <section class="header">
     <header class="header__content wrapper clearfix">
 
-        <div class="col-md-9">
+        <div class="col-md-8">
             <div class="header__logo">
                 <img src="images/furusho-masthead-logo.png" alt="">
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="header__info">
-                <h4>Just off Edens Expressway (Hwy 94)</h4>
+                <h4>Just off Edens Expressway (Hwy&nbsp;94)</h4>
                 <h5>New Patients: {{ site.data.content.contact.phone-new }}</h5>
                 <h6>Existing Patients: {{ site.data.content.contact.phone-existing }}</h6>
             </div>
