--- a/webroot/_scss/components/_header.scss
+++ b/webroot/_scss/components/_header.scss
@@ -1,5 +1,14 @@
 .header {
   border: solid 1px $c-gray;
+  &__info {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .header__info {
+    text-align: right;
+  }
 }
 
 .nav {
