styling and layout including section headers and light purple background

--- a/webroot/_includes/organisms/header.html
+++ b/webroot/_includes/organisms/header.html
@@ -9,7 +9,7 @@
         <div class="col-md-4">
             <div class="header__info">
                 <h4>Just off Edens Expressway (Hwy&nbsp;94)</h4>
-                <h5>New Patients: {{ site.data.content.contact.phone-new }}</h5>
+                <h5 class="font-accent-purple">New Patients: {{ site.data.content.contact.phone-new }}</h5>
                 <h6>Existing Patients: {{ site.data.content.contact.phone-existing }}</h6>
             </div>
         </div>
