--- a/webroot/_scss/base/_colors.scss
+++ b/webroot/_scss/base/_colors.scss
@@ -6,7 +6,7 @@ $c-gray: hsl(0, 0%, 50%);
 //backgrounds
 $background-dark: #8117B7;
 $background-first: #76BFB7;
-$background-second: #76BFB7;
+$background-second: #EFEAF1;
 $background-third: #76BFB7;
 $background-footer: #4A4A4A;
 
