--- a/webroot/_scss/main.scss
+++ b/webroot/_scss/main.scss
@@ -11,9 +11,15 @@ body {
   padding: 15px;
 }
 
+h2 {
+  font-size: 60px;
+}
+
 .heading {
   text-align: center;
   color: $accent-font-second;
+  padding: 20px 0px;
+  line-height: 64px;
 }
 
 .center {
@@ -22,4 +28,16 @@ body {
 
 img {
   width: 100%;
+}
+
+.container {
+  padding: 20px;
+}
+
+.font-accent-purple {
+  color: $accent-font-second;
+}
+
+.background-light-purple {
+  background-color: $background-second;
 }
