--- a/webroot/_scss/main.scss
+++ b/webroot/_scss/main.scss
@@ -2,6 +2,7 @@
 @import "globals/_fonts.scss";
 @import "components/_contact.scss";
 @import "components/_specials.scss";
+@import "components/_services.scss";
 @import "components/_footer.scss";
 @import "components/_header.scss";
 @import "components/_btn.scss";
