site wide styling

--- a/webroot/_includes/organisms/header.html
+++ b/webroot/_includes/organisms/header.html
@@ -1,4 +1,4 @@
-<section class="header">
+<section class="header section-margins">
     <header class="header__content wrapper clearfix">
 
         <div class="col-md-8">
