--- a/webroot/_scss/base/_colors.scss
+++ b/webroot/_scss/base/_colors.scss
@@ -1,5 +1,3 @@
-$c-gray: hsl(0, 0%, 50%);
-
 //colors
 //========
 
@@ -7,9 +5,8 @@ $c-gray: hsl(0, 0%, 50%);
 $background-dark: #8117B7;
 $background-first: #76BFB7;
 $background-second: #EFEAF1;
-$background-third: #76BFB7;
+$background-third: #E5F0EF;
 $background-footer: #4A4A4A;
-
 
 //font colors
 $primary-font: rgba(56,27,71,0.90);
