--- a/webroot/_includes/organisms/contact.html
+++ b/webroot/_includes/organisms/contact.html
@@ -1,4 +1,4 @@
-<section class="contact{% if include.additional %} contact--has-additional{% endif %}">
+<section class="contact{% if include.additional %} contact--has-additional{% endif %} section-margins">
     <div class="contact__content container clearfix">
 
         <div class="row">
