--- a/webroot/_scss/components/_contact.scss
+++ b/webroot/_scss/components/_contact.scss
@@ -19,13 +19,27 @@
   &--pull-right {
     text-align: center;
   }
+  &__btn {
+    margin-top: 5px;
+  }
+}
+
+.contact_form {
+  &__row {
+    display: flex;
+    margin: 10px 0px;
+    height: 30px;
+  }
+  &__input {
+    flex-grow: 1;
+    margin: 0px 10px;
+  }
 }
 
 @media screen and (min-width: 992px) {
   .contact {
     &--pull-left {
       text-align: left;
-      padding-top: 20px;
     }
     &--pull-right {
       text-align: right;
