add font awesome icons

--- a/webroot/_scss/main.scss
+++ b/webroot/_scss/main.scss
@@ -1,3 +1,13 @@
+@import "base/_colors.scss";
+@import "globals/_fonts.scss";
+@import "components/_contact.scss";
+@import "components/_specials.scss";
+@import "components/_services.scss";
+@import "components/_footer.scss";
+@import "components/_marquee.scss";
+@import "components/_header.scss";
+@import "components/_btn.scss";
+@import "vendor/_slick-theme.scss";
 
 body {
   padding: 15px;
@@ -63,13 +73,3 @@ p {
 label {
   font-weight: 400;
 }
-
-@import "base/_colors.scss";
-@import "globals/_fonts.scss";
-@import "components/_contact.scss";
-@import "components/_specials.scss";
-@import "components/_services.scss";
-@import "components/_footer.scss";
-@import "components/_header.scss";
-@import "components/_btn.scss";
-
