--- a/webroot/_includes/head.html
+++ b/webroot/_includes/head.html
@@ -11,15 +11,15 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!--Font Awesome Icons-->
+    <link rel="stylesheet" href="vendor/font-awesome.css">
+
     <!--Bootstrao-->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
-
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-    <!-- Add the slick-theme.css if you want default styling -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
-
+    <!--Slick Carousel-->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="vendor/slick.css">
 
 
     <!--TODO ask Dan about modernizr-->
