--- a/webroot/_scss/main.scss
+++ b/webroot/_scss/main.scss
@@ -73,3 +73,12 @@ p {
 label {
   font-weight: 400;
 }
+
+//Font Awesome Custom
+
+.fa-star {
+  &--custom {
+    color: #FFD700;
+    font-size: 30px;
+  }
+}
