add patient marquee tour show

--- a/webroot/_scss/main.scss
+++ b/webroot/_scss/main.scss
@@ -74,6 +74,16 @@ label {
   font-weight: 400;
 }
 
+//Slick Overrides
+
+.slick-next {
+  right: 25px;
+}
+
+.slick-prev {
+  left: 25px;
+}
+
 //Font Awesome Custom
 
 .fa-star {
