add simple marquees and first page container

--- a/webroot/_includes/organisms/footer.html
+++ b/webroot/_includes/organisms/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<section class="footer container">
     <footer class="footer__wrapper center clearfix">
         <div class="footer__content">
             <a href="https://www.facebook.com/Dentistry-for-Kids-Ltd-Dr-Furusho-Dr-Kollmann-293517314003627/"><img src="images/facebook_round_blue.svg" alt="facebook link" class="facebook-icon pull-left"></a>
