--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -10,23 +10,37 @@
 @import "vendor/_slick-theme.scss";
 
 body {
-  padding: 15px;
+  padding: 0px;
 }
-
+.nav {
+  clear: both;
+}
 .heading {
   text-align: center;
   color: $accent-font-second;
-  padding: 20px 0px;
+  padding: 20px 0px 0px;
   line-height: 64px;
   font-size: 60px;
 }
-
+.header {
+    position: fixed;
+    z-index: 100;
+    background: #fff;
+    top: 0px;
+    padding: 15px 15px 0px;
+}
+.main-container {
+  margin-top: 235px;
+}
 .center {
   text-align: center;
 }
 
 .section-margins {
   margin: 15px 0px;
+}
+.header.section-margins {
+  margin: 0;
 }
 
 img {
