add font styling to the header

--- a/html/_includes/organisms/header.html
+++ b/html/_includes/organisms/header.html
@@ -8,8 +8,8 @@
         </div>
         <div class="col-md-4">
             <div class="header__info">
-                <h4>Just off Edens Expressway (Hwy&nbsp;94)</h4>
-                <h5 class="font-accent-purple">New Patients: {{ site.data.content.contact.phone-new }}</h5>
+                <h4 class="font-accent-green">Just off Edens Expressway (Hwy&nbsp;94)</h4>
+                <h5 class="font-accent-purple">New Patients: <span class="header__info--bold">{{ site.data.content.contact.phone-new }}</span></h5>
                 <h6>Existing Patients: {{ site.data.content.contact.phone-existing }}</h6>
             </div>
         </div>
