--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -15,7 +15,13 @@
   padding: 20px 0px;
   line-height: 64px;
   font-size: 60px;
+  font-weight: 600;
+  &--small h2 {
+    font-size: 48px;
+  }
 }
+
+
 
 .center {
   text-align: center;
@@ -60,7 +66,8 @@ img {
 
 h2 {
   font-size: 60px;
-  font-weight: 400;
+  //font-weight: 400;
+  font-weight: 600;
 }
 
 h6 {
