--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -29,11 +29,11 @@ body {
   }
 }
 .header {
-    position: fixed;
-    z-index: 100;
-    background: #fff;
-    top: 0px;
-    padding: 15px 15px 0px;
+  position: fixed;
+  z-index: 100;
+  background: #fff;
+  top: 0px;
+  padding: 15px 15px 0px;
 }
 .main-container {
   margin-top: 235px;
@@ -157,4 +157,70 @@ label {
 
 .team-additional {
   padding-top:40px;
+}
+
+//accordion
+.ui-helper-reset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  line-height: 1.3;
+  text-decoration: none;
+  font-size: 100%;
+  list-style: none;
+}
+
+.ui-accordion .ui-accordion-header {
+  display: block;
+  cursor: pointer;
+  position: relative;
+  margin: 2px 0 0;
+  padding: .5em 0;
+  min-height: 0;
+  border-bottom: 1px solid #417505;
+  color: #417505;
+}
+
+.ui-accordion .ui-accordion-header .ui-accordion-header-icon {
+  position: absolute;
+  left: .5em;
+  top: 50%;
+  margin-top: -8px;
+}
+
+.ui-icon {
+  display: block;
+  text-indent: -99999px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+}
+
+.ui-accordion .ui-accordion-content.ui-accordion-content-active {
+  border-bottom: 1px solid #417505;
+}
+
+.ui-accordion-content {
+  max-height: 500px;
+  transition: .5s max-height ease;
+}
+.folded {
+  max-height: 0px;
+}
+.ui-accordion .ui-accordion-content {
+  margin: .5em 0;
+  overflow: auto;
+  border: none;
+  font-size: 95%;
+}
+
+.ui-helper-reset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  line-height: 1.3;
+  text-decoration: none;
+  font-size: 100%;
+  list-style: none;
 }
