--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -21,7 +21,7 @@ body {
 .heading {
   text-align: center;
   color: $accent-font-second;
-  padding: 20px 0px 0px;
+  padding: 20px 0px 50px 0px;
   line-height: 64px;
   font-size: 60px;
   font-weight: 600;
