--- a/html/_includes/head.html
+++ b/html/_includes/head.html
@@ -11,6 +11,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link
+            href="http://fonts.googleapis.com/css?family=Open+Sans"
+            rel="stylesheet" type="text/css"/>
+
     <!--Font Awesome Icons-->
     <link rel="stylesheet" href="vendor/font-awesome.css">
 
