add content and basic funciton of patient review section

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -6,6 +6,7 @@
 @import "components/_qa.scss";
 @import "components/_footer.scss";
 @import "components/_marquee.scss";
+@import "components/_reviews.scss";
 @import "components/_header.scss";
 @import "components/_btn.scss";
 @import "vendor/_slick-theme.scss";
