--- a/html/_includes/organisms/contact.html
+++ b/html/_includes/organisms/contact.html
@@ -9,11 +9,11 @@
                 </div>
             </div>
             <div class="col-md-6  contact--pull-left">
-                <a href="#" class="contact__btn btn btn-default btn-lg" data-target="#" data-toggle="modal">Request Appointment</a>
+                <a href="#" class="btn btn-default btn-lg contact__btn" data-target="#" data-toggle="modal">Request Appointment</a>
             </div>
         </div>
 
-        <h6 class="center">Existing patient of our practice call: {{ site.data.content.contact.phone-existing }}</h6>
+        <h4 class="center">Existing patient of our practice call: {{ site.data.content.contact.phone-existing }}</h4>
         {% if include.additional %}
         <hr>
 
