--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -3,6 +3,7 @@
 @import "components/_contact.scss";
 @import "components/_specials.scss";
 @import "components/_services.scss";
+@import "components/_team.scss";
 @import "components/_qa.scss";
 @import "components/_footer.scss";
 @import "components/_marquee.scss";
