add js to toggle the nav menu

--- a/html/_includes/molecule/nav.html
+++ b/html/_includes/molecule/nav.html
@@ -6,7 +6,7 @@
         </div>
     </div>
 
-    <ul class="nav nav-pills nav-justified nav--toogle">
+    <ul class="nav nav-pills nav-justified nav--toggle">
         <li><a class="nav__link" href="index.html#">New Patient Specials</a></li>
         <li><a class="nav__link" href="index.html#">Patient Reviews</a></li>
         {% assign sorted = site.pages | sort:"weight" %}
