--- a/html/_scss/components/_nav.scss
+++ b/html/_scss/components/_nav.scss
@@ -7,12 +7,19 @@
   .custom-nav-btn { display: none; }
 }
 
+@media screen and (max-width: 768px ) {
+  .nav--toggle {
+    display: none;
+  }
+}
+
 .nav {
 
   &__menu-icon {
     padding: 10px 20px;
     font-size: 40px;
     color: white;
+    cursor: pointer;
   }
 }
 
