add bootstrap js for the modal windows, start modals for service section

--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -4,6 +4,8 @@
     background-position: center center;
     background-size: cover;
   &__slide {
+    background-position: center center;
+    background-size: cover;
   }
   &__slide-wrapper {
     height: 600px;
