--- a/html/_includes/foot.html
+++ b/html/_includes/foot.html
@@ -4,6 +4,8 @@
 <script src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script>window.slick || document.write('<script src="js/vendor/slick.min.js"><\/script>')</script>
 
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 <script src="js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
