add fixes to the responsive behavior of the header

--- a/html/_includes/organisms/header.html
+++ b/html/_includes/organisms/header.html
@@ -1,12 +1,12 @@
 <section class="header section-margins">
     <header class="header__content wrapper clearfix">
 
-        <div class="col-md-8">
+        <div class="col-md-7 col-sm-6">
             <div class="header__logo">
                 <img src="images/furusho-masthead-logo.png" alt="">
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5 col-sm-6">
             <div class="header__info">
                 <h4 class="font-accent-green">Just off Edens Expressway (Hwy&nbsp;94)</h4>
                 <h5 class="font-accent-purple">New Patients: <span class="header__info--bold">{{ site.data.content.contact.phone-new }}</span></h5>
