--- a/html/_scss/components/_header.scss
+++ b/html/_scss/components/_header.scss
@@ -1,5 +1,9 @@
 .header {
 
+  &__logo {
+    text-align: left;
+  }
+
   .font-accent-green {
     font-size: 18px;
   }
@@ -49,4 +53,17 @@
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus, .nav-pills>li.active {
   background-color: #512A65;
+}
+
+//Responsive fixes
+
+@media screen and (max-width: 768px) {
+  .header {
+    width: 100%;
+    text-align: center;
+    &__logo img {
+      max-width: 400px;
+    }
+  }
+
 }
