--- a/html/_scss/components/_specials.scss
+++ b/html/_scss/components/_specials.scss
@@ -1,5 +1,12 @@
 .specials {
   &__tile {
     border: 1px solid $background-dark;
+    background-color: white;
+    margin: 10px;
+    text-align: center;
   }
+  &__heading.heading {
+    padding-top: 20px;
+  }
+
 }
