--- a/html/_scss/components/_reviews.scss
+++ b/html/_scss/components/_reviews.scss
@@ -1,12 +1,25 @@
 .reviews {
+  &__heading h2 {
+    margin-top: 0px;
+    padding: 20px 30px 20px 30px;
+  }
   &__main {
     min-height: 650px;
+    position: relative;
+    background-position: center center;
+    background-size: cover;
+  }
+  &__slider {
+    margin-bottom: -20px;
   }
   &__slider__wrapper {
     background: rgba(80,42,100,0.80);
-    position: relative;
+    color: white;
     bottom: 0px;
-    height: 100%;
+    position: absolute;
+    width: 100%;
+    //height: 70%;
+    bottom: 0px;
   }
   &__review {
     padding: 50px 0px 20px 0px;
