--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -34,4 +34,9 @@
   .btn {
     margin: 40px 0px;
   }
+  &--flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
