add marquee content, styling finished on frenectomy page

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -3,6 +3,7 @@
 @import "components/_contact.scss";
 @import "components/_specials.scss";
 @import "components/_services.scss";
+@import "components/_frenectomy.scss";
 @import "components/_team.scss";
 @import "components/_about.scss";
 @import "components/_qa.scss";
@@ -17,6 +18,7 @@
 
 body {
   padding: 0px;
+  color: #4A4A4A;
 }
 
 h1,
