--- a/html/_scss/components/_about.scss
+++ b/html/_scss/components/_about.scss
@@ -29,12 +29,13 @@
     font-weight: 700;
   }
   &__more a {
-    float: right;
     margin-right: 20px;
     text-decoration: underline;
     font-size: 18px;
     line-height: 22px;
     letter-spacing: -0.29px;
+    text-align: right;
+    display: block;
   }
   &__lead-quote {
     font-size: 24px;
