--- a/html/_scss/components/_team.scss
+++ b/html/_scss/components/_team.scss
@@ -1,4 +1,10 @@
 .team {
+  &__main-title {
+    font-size: 36px;
+    letter-spacing: 0px;
+    line-height: 36px;
+    font-weight: 600;
+  }
   &__heading.heading {
     padding-top: 10px;
   }
