fix issues with team carousel

--- a/html/_scss/components/_team.scss
+++ b/html/_scss/components/_team.scss
@@ -12,4 +12,13 @@
     font-size: 36px;
     font-weight: 100;
   }
+  &__modal-pic {
+    text-align: center;
+    & img {
+      max-width: 200px;
+      height: auto;
+      margin-bottom: 30px;
+    }
+  }
 }
+
