--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -290,3 +290,21 @@ label {
   font-size: 100%;
   list-style: none;
 }
+
+.team-additional .slick-dots {
+  background-color: $background-second;
+}
+
+.slick-dots li {
+  margin: 5px;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #541376;
+  opacity: 0.75;
+}
+
+.team-additional .slick-dots button:before {
+  color: #8117B7;
+  font-size: 36px;
+}
