--- a/html/_includes/organisms/contact.html
+++ b/html/_includes/organisms/contact.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="col-md-6  contact--pull-left">
-                <a href="#" class="btn btn-default btn-lg contact__btn" data-target="#" data-toggle="modal">Request Appointment</a>
+                <a href="contact.html#section-contact" class="btn btn-default btn-lg contact__btn">Request Appointment</a>
             </div>
         </div>
 
