--- a/html/_scss/components/_header.scss
+++ b/html/_scss/components/_header.scss
@@ -40,6 +40,11 @@
 .nav-pills>li>a {
   border-radius: 0px;
   height: auto;
+  font-family: 'Raleway';
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: -0.29px;
+  font-weight: 500;
 }
 
 .nav-pills>li:hover {
