--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -103,12 +103,20 @@ section {
   color: #7ED321;
 }
 
+.font-accent-lightgreen {
+  color: #A5ED57;
+}
+
 .font-accent-purple {
   color: $accent-font-second;
 }
 
 .font-accent-white {
   color: $accent-font-first;
+}
+
+.font-accent-yellow {
+  color: #FFD700;
 }
 
 
