add modal forms for contact, added js to handle the api calls

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -305,3 +305,12 @@ section.marquee.marquee--custom:after {
   font-size: 10px;
 }
 
+
+//Form API modal
+.form-error {
+  color: #D56724;
+  margin: 0 0 20px 0;
+  padding: 0 0 0 30px;
+  display: none;
+}
+
