--- a/html/_includes/head.html
+++ b/html/_includes/head.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="vendor/slick.css">
 
+    <link rel="stylesheet" href="vendor/responsive.css">
+
 
     <!--TODO ask Dan about modernizr-->
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
