clean up responsiveness, fix marquee caption to be on only contact page

--- a/html/_layouts/default.html
+++ b/html/_layouts/default.html
@@ -1,8 +1,9 @@
 {% include head.html %}
 
 {% include organisms/header.html %}
-
-{{ content }}
+<div class="container">
+  {{ content }}
+</div>
 
 {% include organisms/footer.html %}
 
