--- a/html/_includes/organisms/header.html
+++ b/html/_includes/organisms/header.html
@@ -1,4 +1,4 @@
-<section class="header section-margins">
+<section class="header">
     <header class="header__content wrapper clearfix">
 
         <div class="col-md-7 col-sm-6">
