add hide of scrolldown on tablet and smaller

--- a/html/_scss/_responsivefixes.scss
+++ b/html/_scss/_responsivefixes.scss
@@ -37,6 +37,9 @@
   .team--byline {
     font-size: 32px;
   }
+  .marquee__scroll-down {
+    display: none;
+  }
 }
 
 @media (max-width: 767px) and (min-width: 480px) {
