fix canvas on main index, css causing styling issues

--- a/html/_scss/_responsivefixes.scss
+++ b/html/_scss/_responsivefixes.scss
@@ -40,6 +40,9 @@
   .marquee__scroll-down {
     display: none;
   }
+  .marquee {
+    min-height: 400px;
+  }
 }
 
 @media (max-width: 767px) and (min-width: 480px) {
