--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -8,7 +8,7 @@
     background-size: cover;
   }
   &__slide-wrapper {
-    height: 600px;
+    //height: 600px;
   }
 
   &__main-text {
@@ -51,7 +51,7 @@
   }
   &--adaptive {
     height: 100%;
-    margin-bottom: -40px;
+    //margin-bottom: -40px;
   }
   &__title--smaller h1 {
     font-size: 48px;
