--- a/html/_scss/_responsivefixes.scss
+++ b/html/_scss/_responsivefixes.scss
@@ -73,8 +73,14 @@ h1.marquee-patients-content {
   .marquee__slide-wrapper h1 {
     padding: 0px 0px 0px 0px;
   }
+
   .marquee__slide-wrapper.marquee-patients h1 {
     padding: 50px 0px;
+  }
+
+  .furusho__image img,
+  .kollman__image img, {
+    max-width: 300px;
   }
 
 }
